<resources>
    <string name="app_name">Stenoexpert</string>
    <string name="course_web_development">Course: Web Development</string>
    <string name="course_details">Coursedetails</string>
    <string name="course_duration_104hrs">Course Duration:104hrs</string>
    <string name="course_web_devolpment">Course : web Devolpment</string>
    <string name="course_duration_104hrs_">Course Duration : 104hrs</string>
    <string name="volume_1_become_a_web_developer_specialist_learn_how_to_design_impressive_ui_build_logic_in_back_end_server_side_scripting">Volume 1 : Become a Web Developer Specialist, learn How to Design Impressive UI , Build logic in back-end, Server Side Scripting.</string>
    <string name="no_of_questions_300_questions">No of Questions : 300 Questions</string>
    <string name="no_of_tests_10_mock_test">No of Tests : 10 Mock Test</string>
    <string name="course">Course</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">home fragment</string>
    <string name="download_fragment">download fragment</string>
    <string name="question_fragment">question fragment</string>
    <string name="stenoexpert">Stenoexpert</string>
    <string name="my_purchase">My Purchase</string>



    <string name="lecture_video">Lecture video</string>
    <string name="demo">Demo</string>
    <string name="logo">logo</string>
    <string name="it_s_beautiful">it\'s beautiful</string>
    <string name="demo_1">Demo 1</string>
    <string name="topics_demo_1_demo_2_demo_3">Topics:Demo 1,Demo 2,Demo 3</string>
    <string name="account">Account</string>
    <string name="how_can_i_help_you">How can i help you</string>
    <string name="ask">Ask</string>
    <string name="bestseller">Bestseller</string>
    <string name="_4_5">4.5</string>


    <string name="_449_00">₹449.00</string>
    <string name="sahil_kumar">Sahil Kumar</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="add_to_favourite">Add to favourite</string>
    <string name="created_by">Created by</string>
    <string name="star4">star4</string>
    <string name="star2">star2</string>
    <string name="star1">star1</string>
    <string name="star3">star3</string>
    <string name="button3">button3</string>
    <string name="button4">button4</string>
    <string name="star5">star5</string>
    <string name="sign_in">Signin</string>
    <string name="todo">todo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Signup</string>
    <string name="edit">Edit</string>
    <string name="username">Username</string>
    <string name="my_images">MyImages</string>
    <string name="users_email_id">UserEmail</string>
    <string name="payments_method">PaymentMethod</string>
    <string name="cards">Card</string>
    <string name="my_todo">MyTodo</string>
    <string name="upi">UPI</string>
    <string name="choose_image">ChooseImage</string>
    <string name="personal_info">PersonalInfo</string>
    <string name="users_name">UsersName</string>
    <string name="mobile_number">MobileNumber</string>
    <string name="state">State</string>
    <string name="district">District</string>

    <string name="create_account">CreateAccount</string>
    <string name="s">S</string>
    <string name="eklavya_batch">Eklavya</string>
    <string name="my_image">Image</string>
    <string name="view_course">ViewCourse</string>
    <string name="notes_demo">NotesDemo</string>
    <string name="page_16">Page</string>
    <string name="name">Name</string>
    <string name="video_25_45_mins">Video</string>
    <string name="lecture_demo1">LectureDemo1</string>
    <string name="downloads">Downloads</string>
    <string name="q_a">QA</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>


    <string name="volume_1_become_a_web_developer_specialist_learn_how_to_design_impressiveui_build_logic_in_back_end_server_side_scripting">Volume 1 : Become a web Developer Specialist.</string>
    <string name="tod">TODO</string>
    <string name="account_settings">Account Settings</string>
    <string name="profile_setting">Profile Setting</string>
    <string name="video_settings">Video Settings</string>
    <string name="video_download_quality">Video Download Quality</string>
    <string name="download_settings">Download Settings</string>
    <string name="help_and_support">Help and Support</string>
    <string name="about_stenoexpert">About Stenoexpert</string>
    <string name="our_services">Our Services</string>
    <string name="frequently_asked_question">Frequently asked question</string>
    <string name="share_stenoexpert">Share Stenoexpert</string>
    <string name="auto_play">Auto-Play</string>
    <string name="recomended_course">Recommended Course</string>
    <string name="trending_course">Trending Course</string>
    <string name="available_soon">Available Soon</string>
    <string name="_1">1</string>
    <string name="lecture_demo">Lecture Demo</string>
    <string name="get_started">Get Started</string>
    <string name="set_image">set image</string>
    <string name="skip">Skip</string>
    <string name="settings">Settings</string>
    <string name="log_out">LogOut</string>
    <string name="communicate">Communicate</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="contact_us">Contact</string>
    <string name="OpenDrawer">OpenDrawer</string>
    <string name="CloseDrawer">CloseDrawer</string>
    <string name="v">View Course</string>
    <string name="Eklavya">Eklavya Batch</string>
    <string name="sahil_kuma">Sahil Kumar</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="cancel">Cancel</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="get_otp">Get OTP</string>
    <string name="my_profile">My Profile</string>
    


</resources>