<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Coursedetails"
    android:background="@color/black">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_height="?actionBarSize">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/gradient"
            app:navigationIcon="@drawable/backarrow"
            app:title="Eklavya batch"
            app:titleTextColor="@color/black"/>
        
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBarLayout"
        android:background="@color/black"
        android:layout_marginBottom="?actionBarSize">

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/agamyalogo"
                    android:layout_width="wrap_content"
                    android:layout_height="236dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/agamya_logo"
                    android:contentDescription="@string/logo"/>

                <TextView
                    android:id="@+id/topic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:text="@string/course_web_devolpment"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:text="@string/course_duration_104hrs_"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/volume1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:text="@string/volume_1_become_a_web_developer_specialist_learn_how_to_design_impressive_ui_build_logic_in_back_end_server_side_scripting"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:text="@string/no_of_questions_300_questions"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/test"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:text="@string/no_of_tests_10_mock_test"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/bestseller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/Yellow"
                    android:padding="10dp"
                    android:text="@string/bestseller"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:id="@+id/layout3"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/_4_5"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/star1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:src="@drawable/rating"
                        app:tint="@color/Yellow"
                        android:contentDescription="@string/star1"/>

                    <ImageView
                        android:id="@+id/star2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:src="@drawable/rating"
                        app:tint="@color/Yellow"
                        android:contentDescription="@string/star2"/>

                    <ImageView
                        android:id="@+id/star3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:src="@drawable/rating"
                        app:tint="@color/Yellow"
                        android:contentDescription="@string/star3"/>

                    <ImageView
                        android:id="@+id/star4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:src="@drawable/rating"
                        app:tint="@color/Yellow"
                        android:contentDescription="@string/star4"/>

                    <ImageView
                        android:id="@+id/halfstar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:src="@drawable/halfstar"
                        app:tint="@color/Yellow"
                        android:contentDescription="@string/star5"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/layout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/created_by"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:padding="8dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sahil_kumar"
                        android:textSize="20sp"
                        android:textColor="@color/Purple"
                        android:padding="8dp"
                        android:textStyle="bold"/>

                </LinearLayout>
                <TextView
                    android:id="@+id/price1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_449_00"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:padding="10dp"/>

                <Button
                    android:id="@+id/buybutton1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/Purple"
                    android:text="@string/buy_now"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:padding="10dp"/>

                <LinearLayout
                    android:id="@+id/layout5"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    tools:ignore="UselessLeaf"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/addtocart"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:background="@color/black"
                        android:text="@string/add_to_cart"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                    <Button
                        android:id="@+id/favoutite"
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="wrap_content"
                        android:background="@color/black"
                        android:text="@string/add_to_favourite"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/price2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/black"
            android:text="@string/_449_00"
            android:textColor="@color/white"
            android:textSize="25sp" />
        <Button
            android:id="@+id/buybutton2"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:background="@color/Purple"
            android:text="@string/buy_now"
            android:textColor="@color/white"
            android:textSize="25sp"/>

    </LinearLayout>

</RelativeLayout>