<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imgg34"
    tools:context=".authentication.signup_page">
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:layout_margin="30dp"/>
    <ImageView
        android:layout_width="180dp"
        android:layout_height="200dp"
        android:src="@drawable/download23"
        android:layout_marginTop="7dp"
        android:layout_marginStart="220dp"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:id="@+id/name_corner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="320dp"
            android:background="@drawable/round_corner"
            android:hint="@string/s"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="23sp"
            android:textStyle="bold"
            android:autofillHints="ENTER NAME" />

        <EditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner"
            android:layout_marginTop="15dp"
            android:hint="@string/email"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="23sp"
            android:textStyle="bold"
            tools:ignore="TextFields"
            android:autofillHints="ENTER NAME" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/round_corner"
            android:hint="@string/password"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="23sp"
            android:textStyle="bold"
            android:autofillHints="ENTER NAME" />

        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/select" />
        <Button
            android:id="@+id/signin"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_corner"
            android:backgroundTint="@color/black"
            android:padding="15dp"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>
    
</RelativeLayout>